[gd_scene load_steps=21 format=4 uid="uid://bgupyctlxkji0"]

[ext_resource type="FontFile" uid="uid://dvb22qrytkpm1" path="res://assets/fonts/8-bit Arcade In.ttf" id="1_ussft"]
[ext_resource type="Texture2D" uid="uid://cbq15cuq28els" path="res://assets/pixelart/menubutton .png" id="2_qyoq2"]
[ext_resource type="Texture2D" uid="uid://c0b72niv6d45a" path="res://assets/pixelart/menubuttonpressed.png" id="3_hqp5a"]
[ext_resource type="Script" path="res://scripts/hover.gd" id="4_ox38i"]
[ext_resource type="Texture2D" uid="uid://p1dokq8udka8" path="res://assets/pixelart/ninja.png" id="5_o1x0p"]
[ext_resource type="Script" path="res://scripts/ninja.gd" id="6_oehri"]
[ext_resource type="Script" path="res://scripts/slide_in.gd" id="7_mpbh1"]
[ext_resource type="Texture2D" uid="uid://bdvgxkkcrv3s3" path="res://assets/pixelart/tileset.png" id="8_cnyvd"]
[ext_resource type="AudioStream" uid="uid://c6yd036e3e6mi" path="res://assets/music/Recording 2025-04-13 115153.mp3" id="9_cg6wu"]
[ext_resource type="Script" path="res://scripts/music.gd" id="10_ett4k"]

[sub_resource type="FontVariation" id="FontVariation_0ime0"]
base_font = ExtResource("1_ussft")

[sub_resource type="FontVariation" id="FontVariation_rovsv"]
base_font = ExtResource("1_ussft")
spacing_glyph = 2

[sub_resource type="Animation" id="Animation_jfmub"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ninja:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(26, 598)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ninja:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6.54, 6.54)]
}

[sub_resource type="Animation" id="Animation_h4p5h"]
resource_name = "run"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ninja:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(26, 598), Vector2(290, 598), Vector2(26, 598)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ninja:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-6.54, -6.54), Vector2(6.54, -6.54)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mnfyo"]
_data = {
"RESET": SubResource("Animation_jfmub"),
"run": SubResource("Animation_h4p5h")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_qepii"]
atlas = ExtResource("5_o1x0p")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6peqq"]
atlas = ExtResource("5_o1x0p")
region = Rect2(24, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_8dm7c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qepii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6peqq")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jjl13"]
texture = ExtResource("8_cnyvd")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.94454, -4, 2.12132, -4, 2.03293, 4, -2.03293, 4)

[sub_resource type="TileSet" id="TileSet_vjfn2"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_jjl13")

[node name="menu" type="Node2D"]

[node name="logo" type="Label" parent="."]
offset_left = 25.0
offset_top = 13.0
offset_right = 205.0
offset_bottom = 45.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_0ime0")
theme_override_font_sizes/font_size = 48
text = "Homesick"
horizontal_alignment = 1
vertical_alignment = 1

[node name="logo2" type="Label" parent="."]
offset_left = 26.0
offset_top = 69.0
offset_right = 134.0
offset_bottom = 101.0
scale = Vector2(2.485, 2.485)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_0ime0")
theme_override_font_sizes/font_size = 48
text = "ninja"
horizontal_alignment = 1
vertical_alignment = 1

[node name="playText" type="Label" parent="."]
offset_left = 86.0
offset_top = 230.0
offset_right = 210.0
offset_bottom = 263.0
scale = Vector2(1.68, 1.68)
pivot_offset = Vector2(62.56, 20.29)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_0ime0")
theme_override_font_sizes/font_size = 48
text = "play"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_ox38i")

[node name="playButton" type="TextureButton" parent="playText"]
layout_mode = 0
offset_left = -7.99997
offset_top = -1.99997
offset_right = 24.0
offset_bottom = 12.0
scale = Vector2(4.245, 4.245)
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("2_qyoq2")
texture_pressed = ExtResource("3_hqp5a")
texture_hover = ExtResource("2_qyoq2")
texture_disabled = ExtResource("2_qyoq2")

[node name="optionsText" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.380392)
offset_left = 86.0
offset_top = 358.0
offset_right = 197.0
offset_bottom = 391.0
scale = Vector2(1.68, 1.68)
pivot_offset = Vector2(62.56, 20.29)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_0ime0")
theme_override_font_sizes/font_size = 48
text = " lore"
horizontal_alignment = 1
vertical_alignment = 1

[node name="optionsButton" type="TextureButton" parent="optionsText"]
layout_mode = 0
offset_left = -7.99997
offset_top = -1.99997
offset_right = 24.0
offset_bottom = 12.0
scale = Vector2(4.245, 4.245)
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("2_qyoq2")
texture_pressed = ExtResource("3_hqp5a")
texture_hover = ExtResource("2_qyoq2")
texture_disabled = ExtResource("2_qyoq2")

[node name="wonkyProductions" type="Label" parent="."]
z_index = 1
offset_left = 347.0
offset_top = 504.0
offset_right = 637.0
offset_bottom = 606.0
scale = Vector2(0.94, 0.94)
theme_override_fonts/font = SubResource("FontVariation_rovsv")
theme_override_font_sizes/font_size = 48
text = "A WONKY PRODUCTIONS GAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ninjaRunning" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mnfyo")
}

[node name="ninja" type="AnimatedSprite2D" parent="."]
position = Vector2(26, 598)
rotation = 3.14159
scale = Vector2(6.54, 6.54)
sprite_frames = SubResource("SpriteFrames_8dm7c")
animation = &"run"
frame_progress = 0.412516
script = ExtResource("6_oehri")

[node name="slideIn" type="ColorRect" parent="."]
z_index = 645
offset_left = 649.0
offset_top = -25.0
offset_right = 1301.0
offset_bottom = 698.0
color = Color(0, 0, 0, 1)
script = ExtResource("7_mpbh1")

[node name="slideIn2" type="ColorRect" parent="slideIn"]
layout_mode = 0
offset_left = -16.0
offset_right = 89.0
offset_bottom = 723.0
color = Color(0, 0, 0, 1)

[node name="tiles" type="TileMapLayer" parent="."]
modulate = Color(0, 0, 0, 1)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAAJAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAKAA4AAAAAAAAAAAAKAA8AAAAAAAAAAAALAA4AAAAAAAAAAAALAA8AAAAAAAAAAAAMAA4AAAAAAAAAAAAMAA8AAAAAAAAAAAANAA4AAAAAAAAAAAANAA8AAAAAAAAAAAAOAA4AAAAAAAAAAAAOAA8AAAAAAAAAAAAPAA8AAAAAAAAAAAAPAA4AAAAAAAAAAAAPAA0AAAAAAAAAAAAPAAwAAAAAAAAAAAAJAAwAAAABAAAAABAJAA0AAAAAAAAAAAAKAAwAAAAAAAAAAAAKAA0AAAAAAAAAAAALAAwAAAAAAAAAAAALAA0AAAAAAAAAAAAMAAwAAAAAAAAAAAAMAA0AAAAAAAAAAAANAAwAAAAAAAAAAAANAA0AAAAAAAAAAAAOAAwAAAAAAAAAAAAOAA0AAAAAAAAAAAAIAA0AAAABAAAAABAIAA4AAAAAAAAAAAAIAA8AAAAAAAAAAAA=")
tile_set = SubResource("TileSet_vjfn2")

[node name="menuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_cg6wu")
volume_db = 1.074
parameters/looping = false
script = ExtResource("10_ett4k")

[connection signal="button_down" from="playText/playButton" to="playText" method="_on_play_button_button_down"]
[connection signal="button_up" from="playText/playButton" to="playText" method="_on_play_button_button_up"]
[connection signal="mouse_entered" from="playText/playButton" to="playText" method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="playText/playButton" to="playText" method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="playText/playButton" to="playText" method="_on_play_button_pressed"]
[connection signal="button_down" from="optionsText/optionsButton" to="optionsText" method="_on_play_button_button_down"]
[connection signal="button_up" from="optionsText/optionsButton" to="optionsText" method="_on_play_button_button_up"]
[connection signal="mouse_entered" from="optionsText/optionsButton" to="optionsText" method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="optionsText/optionsButton" to="optionsText" method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="optionsText/optionsButton" to="optionsText" method="_on_options_button_pressed"]
